# okta-mcp-server

./: CHANGELOG.md  README.md  pyproject.toml
src/okta_mcp_server/: server.py
src/okta_mcp_server/tools/applications/: applications.py
src/okta_mcp_server/tools/customization/brands/: brands.py
src/okta_mcp_server/tools/customization/custom_domains/: custom_domains.py
src/okta_mcp_server/tools/customization/custom_pages/: custom_pages.py
src/okta_mcp_server/tools/customization/custom_templates/: custom_templates.py
src/okta_mcp_server/tools/customization/email_domains/: email_domains.py
src/okta_mcp_server/tools/customization/themes/: themes.py
src/okta_mcp_server/tools/device_assurance/: device_assurance.py
src/okta_mcp_server/tools/devices/: devices.py
src/okta_mcp_server/tools/groups/: groups.py
src/okta_mcp_server/tools/policies/: policies.py
src/okta_mcp_server/tools/system_logs/: login_failures.py  system_logs.py
src/okta_mcp_server/tools/universallogout/: universallogout.py
src/okta_mcp_server/tools/users/: users.py
src/okta_mcp_server/utils/: client.py  dpop_executor.py  elicitation.py  messages.py  pagination.py  scope_guard.py  scope_registry.py  scope_stubs.py  validation.py
src/okta_mcp_server/utils/auth/: auth_manager.py
tests/: test_create_user.py  test_custom_templates.py  test_device_assurance.py  test_pagination.py  test_validation.py
